# pillow_project

./: pillow_script.py  pyproject.toml
